--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,1 +1,1 @@
-<!DOCTYPE html> <html lang=en> <head> <meta charset=utf8> </head> <body> <snake></snake> <script type="text/javascript" src="bundle.js"></script></body> </html>
+<!DOCTYPE html> <html lang=en> <head> <meta charset=utf8> <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel=stylesheet> </head> <body> <snake></snake> <script type="text/javascript" src="bundle.js"></script></body> </html>
